crates/wdl-grammar/tests/parsing/imports-symbolic-recovery/source.wdl
version 1.4

import from
task ok {
    command <<<>>>
}
